--- a/TermExcelerator/Sdl.Community.TermExcelerator.Tests/Sdl.Community.TermExcelerator.Tests.csproj
+++ b/TermExcelerator/Sdl.Community.TermExcelerator.Tests/Sdl.Community.TermExcelerator.Tests.csproj
@@ -42,7 +42,7 @@
       <HintPath>$(TradosFolder)\Sdl.Core.Globalization.Async.dll</HintPath>
     </Reference>
     <Reference Include="Sdl.Terminology.TerminologyProvider.Core">
-      <HintPath>$(MSBuildProgramFiles32)\Trados\Trados Studio\Studio17\Sdl.Terminology.TerminologyProvider.Core.dll</HintPath>
+      <HintPath>$(TradosFolder)\Sdl.Terminology.TerminologyProvider.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
