--- a/Toolkit/SDLXLIFFSliceOrChange/SDLXLIFFSliceOrChange.csproj
+++ b/Toolkit/SDLXLIFFSliceOrChange/SDLXLIFFSliceOrChange.csproj
@@ -183,11 +183,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>SDLXLIFF.fr-FR.resx</DependentUpon>
     </Compile>
-    <Compile Include="SDLXLIFFSliceOrChange.cs">
+    <Compile Include="SdlxliffSliceOrChange.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="SDLXLIFFSliceOrChange.Designer.cs">
-      <DependentUpon>SDLXLIFFSliceOrChange.cs</DependentUpon>
+    <Compile Include="SdlxliffSliceOrChange.Designer.cs">
+      <DependentUpon>SdlxliffSliceOrChange.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceManager\UIResources.cs" />
@@ -233,8 +233,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>SDLXLIFF.fr-FR.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="SDLXLIFFSliceOrChange.resx">
-      <DependentUpon>SDLXLIFFSliceOrChange.cs</DependentUpon>
+    <EmbeddedResource Include="SdlxliffSliceOrChange.resx">
+      <DependentUpon>SdlxliffSliceOrChange.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="SearchResults.resx">
       <DependentUpon>SearchResults.cs</DependentUpon>
