--- a/Toolkit/SdlXliffToolkit/SdlXliffToolkit.csproj
+++ b/Toolkit/SdlXliffToolkit/SdlXliffToolkit.csproj
@@ -95,6 +95,7 @@
     <Compile Include="TellMe\Actions\SourceCodeAction.cs" />
     <Compile Include="TellMe\TellMeProvider.cs" />
     <Compile Include="TellMe\ToolkitAbastractTellMeAction.cs" />
+    <Compile Include="TradosView.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\SourceCode.ico" />
@@ -131,7 +132,7 @@
       <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="Sdl.Core.PluginFramework.Build">
-      <Version>17.0.0</Version>
+      <Version>18.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
